--- a/SistemaFactura2/SistemaFactura2/Views/Clientes/Index.cshtml
+++ b/SistemaFactura2/SistemaFactura2/Views/Clientes/Index.cshtml
@@ -1,14 +1,17 @@
 ﻿@model IEnumerable<SistemaFactura2.Models.Clientes>
 
 @{
+    /**/
+
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Clientes</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+
 <table class="table">
     <tr>
         <th>
@@ -29,29 +32,30 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Categoria.Categoria)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.RNC)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Nombre)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Telefono)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.IDClientes }) |
-            @Html.ActionLink("Details", "Details", new { id=item.IDClientes }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.IDClientes })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Categoria.Categoria)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.RNC)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Nombre)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Telefono)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Email)
+            </td>
+            <td>
+                @Html.ActionLink("Editar", "Edit", new { id = item.IDClientes }) |
+                @Html.ActionLink("Detalles", "Details", new { id = item.IDClientes }) |
+                @Html.ActionLink("Eliminar", "Delete", new { id = item.IDClientes })
+            </td>
+        </tr>
+    }
 
 </table>
