--- a/SistemaFactura2/SistemaFactura2/Views/Productos/Index.cshtml
+++ b/SistemaFactura2/SistemaFactura2/Views/Productos/Index.cshtml
@@ -1,10 +1,24 @@
 ﻿@model IEnumerable<SistemaFactura2.Models.Productos>
 
 @{
-    ViewBag.Title = "Index";
+                /**/
+
+                ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Productos</h2>
+
+@using (Html.BeginForm("index", "Productos", "index"))
+{
+    <p>
+        Search: @Html.TextBox("nombre", (string)ViewBag.name)
+        <input class="btn btn-primary btn-sm" type="submit" value="search" />
+    </p>
+}
+
+<p>
+    @Html.ActionLink("Nuevo", "Create")
+</p>
 
 <p>
     @Html.ActionLink("Create New", "Create")
@@ -20,20 +34,21 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Nombre)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Precio)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.IDProductos }) |
-            @Html.ActionLink("Details", "Details", new { id=item.IDProductos }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.IDProductos })
-        </td>
-    </tr>
+    @foreach (var item in Model)
+    {
+<tr>
+    <td>
+        @Html.DisplayFor(modelItem => item.Nombre)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Precio)
+    </td>
+    <td>
+        @Html.ActionLink("Edit", "Edit", new { id = item.IDProductos }) |
+        @Html.ActionLink("Details", "Details", new { id = item.IDProductos }) |
+        @Html.ActionLink("Delete", "Delete", new { id = item.IDProductos })
+    </td>
+</tr>
 }
 
 </table>
