--- a/SistemaFactura2/SistemaFactura2/Views/Clientes/Index.cshtml
+++ b/SistemaFactura2/SistemaFactura2/Views/Clientes/Index.cshtml
@@ -9,8 +9,16 @@
 <h2>Clientes</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Nuevo", "Create")
 </p>
+
+@*@using (Html.BeginForm("index", "Clientes", "index"))
+{
+<p>
+    Search: @Html.TextBox("nombre", (string)ViewBag.name && "email", (string)ViewBag.email)
+    <input class="btn btn-primary btn-sm" type="submit" value="search" />
+</p>
+}*@
 
 <table class="table">
     <tr>
