--- a/SistemaFactura2/SistemaFactura2/Views/DetalleFacturas/Details.cshtml
+++ b/SistemaFactura2/SistemaFactura2/Views/DetalleFacturas/Details.cshtml
@@ -4,10 +4,9 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Detalles de Factura</h2>
 
 <div>
-    <h4>DetalleFactura</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -53,6 +52,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.IDDetalle }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar ", "Edit", new { id = Model.IDDetalle }) |
+    @Html.ActionLink(" Volver al Listado", "Index")
 </p>
