--- a/SistemaFactura2/SistemaFactura2/Views/DetalleFacturas/Index.cshtml
+++ b/SistemaFactura2/SistemaFactura2/Views/DetalleFacturas/Index.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Detalle d Facturas</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Nuevo", "Create")
 </p>
 <table class="table">
     <tr>
@@ -47,9 +47,9 @@
             @Html.DisplayFor(modelItem => item.SubTotal)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.IDDetalle }) |
-            @Html.ActionLink("Details", "Details", new { id=item.IDDetalle }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.IDDetalle })
+            @Html.ActionLink("Editar", "Edit", new { id=item.IDDetalle }) |
+            @Html.ActionLink("Detalles", "Details", new { id=item.IDDetalle }) |
+            @Html.ActionLink("Eliminar", "Delete", new { id=item.IDDetalle })
         </td>
     </tr>
 }
