--- a/SistemaFactura2/SistemaFactura2/Views/Clientes/Index.cshtml
+++ b/SistemaFactura2/SistemaFactura2/Views/Clientes/Index.cshtml
@@ -12,13 +12,14 @@
     @Html.ActionLink("Nuevo", "Create")
 </p>
 
-@*@using (Html.BeginForm("index", "Clientes", "index"))
+@using (Html.BeginForm("index", "Clientes", "index"))
 {
+    
 <p>
-    Search: @Html.TextBox("nombre", (string)ViewBag.name && "email", (string)ViewBag.email)
+    Search: @Html.TextBox("nombre", (string)ViewBag.name)
     <input class="btn btn-primary btn-sm" type="submit" value="search" />
 </p>
-}*@
+}
 
 <table class="table">
     <tr>
