Sistema de Facturacion
Se agrego el buscador de clientes y proveedores por nombre

--- a/SistemaFactura2/SistemaFactura2/Views/Proveedores/Index.cshtml
+++ b/SistemaFactura2/SistemaFactura2/Views/Proveedores/Index.cshtml
@@ -4,11 +4,18 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Proveedores</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Nuevo", "Create")
 </p>
+@using (Html.BeginForm("index", "Productos", "index"))
+{
+    <p>
+        Search: @Html.TextBox("nombre", (string)ViewBag.name)
+        <input class="btn btn-primary btn-sm" type="submit" value="search" />
+    </p>
+}
 <table class="table">
     <tr>
         <th>
@@ -26,26 +33,27 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.RNC)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Nombre)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Telefono)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.IDProveedores }) |
-            @Html.ActionLink("Details", "Details", new { id=item.IDProveedores }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.IDProveedores })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.RNC)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Nombre)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Telefono)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Email)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.IDProveedores }) |
+                @Html.ActionLink("Details", "Details", new { id = item.IDProveedores }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.IDProveedores })
+            </td>
+        </tr>
+    }
 
 </table>
