--- a/SistemaFactura2/SistemaFactura2/Views/Home/Index.cshtml
+++ b/SistemaFactura2/SistemaFactura2/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="jumbotron">
     <h1>Floristeria</h1>
-    <img src="~/Img/Flor1.jpg" height="100" />
+    <img src="~/Img/3082948.jpg" />
     @*<p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>*@
 </div>
