Sistema de Facturacion
Modificacion del diseño de los botones de los controladores y el diseño de la inde de controlador home y el layout.

--- a/SistemaFactura2/SistemaFactura2/Views/Categorias/Edit.cshtml
+++ b/SistemaFactura2/SistemaFactura2/Views/Categorias/Edit.cshtml
@@ -33,7 +33,7 @@
 }
 
 <div>
-    @Html.ActionLink("Volver al Listado ", "Index")
+    @Html.ActionLink("Volver al Listado ", "Index", null, new { @class = "btn btn-info" })
 </div>
 
 @section Scripts {
