--- a/SistemaFactura2/SistemaFactura2/Views/Productos/Index.cshtml
+++ b/SistemaFactura2/SistemaFactura2/Views/Productos/Index.cshtml
@@ -17,7 +17,7 @@
 }
 
 <p>
-    @Html.ActionLink("Nuevo", "Create")
+    @Html.ActionLink("Nuevo", "Create", null, new { @class = "btn btn-info" })
 </p>
 
 <table class="table">
