--- a/SistemaFactura2/SistemaFactura2/Views/Categorias/Create.cshtml
+++ b/SistemaFactura2/SistemaFactura2/Views/Categorias/Create.cshtml
@@ -24,14 +24,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Nuevo" class="btn btn-default" />
+                <input type="submit" value="Nuevo" class="btn btn-info" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Volver al Listado", "Index")
+    @Html.ActionLink("Volver al Listado", "Index", null, new { @class = "btn btn-info" })
 </div>
 
 @section Scripts {
