--- a/SistemaFactura2/SistemaFactura2/Views/Categorias/Delete.cshtml
+++ b/SistemaFactura2/SistemaFactura2/Views/Categorias/Delete.cshtml
@@ -25,7 +25,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Eliminar" class="btn btn-default" /> |
-            @Html.ActionLink("Volver al Listado", "Index")
+            @Html.ActionLink("Volver al Listado", "Index", null, new { @class = "btn btn-info" })
         </div>
     }
 </div>
