--- a/SistemaFactura2/SistemaFactura2/Views/Categorias/Details.cshtml
+++ b/SistemaFactura2/SistemaFactura2/Views/Categorias/Details.cshtml
@@ -21,5 +21,5 @@
 </div>
 <p>
     @Html.ActionLink("Editar ", "Edit", new { id = Model.IDCategoria }) |
-    @Html.ActionLink(" Volver al Listado", "Index")
+    @Html.ActionLink(" Volver al Listado", "Index", null, new { @class = "btn btn-info" })
 </p>
