--- a/SistemaFactura2/SistemaFactura2/Views/EntradaMercancias/Delete.cshtml
+++ b/SistemaFactura2/SistemaFactura2/Views/EntradaMercancias/Delete.cshtml
@@ -4,11 +4,10 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Eliminar Mercancia</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Estas seguro de quere eliminarlo?</h3>
 <div>
-    <h4>EntradaMercancia</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -49,8 +48,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Eliminar" class="btn btn-default" /> |
+            @Html.ActionLink("Volver al Listado", "Index")
         </div>
     }
 </div>
