--- a/SistemaFactura2/SistemaFactura2/Views/EntradaMercancias/Details.cshtml
+++ b/SistemaFactura2/SistemaFactura2/Views/EntradaMercancias/Details.cshtml
@@ -4,10 +4,9 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Detalles de Mercancias</h2>
 
 <div>
-    <h4>EntradaMercancia</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -45,6 +44,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.IDEntrada }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar", "Edit", new { id = Model.IDEntrada }) |
+    @Html.ActionLink("Volver al Listado", "Index")
 </p>
