--- a/SistemaFactura2/SistemaFactura2/Views/EntradaMercancias/Index.cshtml
+++ b/SistemaFactura2/SistemaFactura2/Views/EntradaMercancias/Index.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Mercancia</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Nuevo", "Create")
 </p>
 <table class="table">
     <tr>
@@ -41,9 +41,9 @@
             @Html.DisplayFor(modelItem => item.FechaEntrada)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.IDEntrada }) |
-            @Html.ActionLink("Details", "Details", new { id=item.IDEntrada }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.IDEntrada })
+            @Html.ActionLink("Editar", "Edit", new { id=item.IDEntrada }) |
+            @Html.ActionLink("Detalles", "Details", new { id=item.IDEntrada }) |
+            @Html.ActionLink("Eliminar", "Delete", new { id=item.IDEntrada })
         </td>
     </tr>
 }
