--- a/SistemaFactura2/SistemaFactura2/Views/Facturas/Index.cshtml
+++ b/SistemaFactura2/SistemaFactura2/Views/Facturas/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Nuevo", "Create")
 </p>
 <table class="table">
     <tr>
@@ -59,9 +59,9 @@
             @Html.DisplayFor(modelItem => item.FechaCreacion)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.IDFactura }) |
-            @Html.ActionLink("Details", "Details", new { id=item.IDFactura }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.IDFactura })
+            @Html.ActionLink("Editar", "Edit", new { id=item.IDFactura }) |
+            @Html.ActionLink("Detalle", "Details", new { id=item.IDFactura }) |
+            @Html.ActionLink("Eliminar", "Delete", new { id=item.IDFactura })
         </td>
     </tr>
 }
