--- a/SistemaFactura2/SistemaFactura2/Views/Proveedores/Index.cshtml
+++ b/SistemaFactura2/SistemaFactura2/Views/Proveedores/Index.cshtml
@@ -7,7 +7,8 @@
 <h2>Proveedores</h2>
 
 <p>
-    @Html.ActionLink("Nuevo", "Create")
+    @Html.ActionLink("Nuevo", "Create", null, new { @class = "btn btn-info" })
+    @Html.ActionLink("Print","Imprimir", null, new { @class = "btn btn-info"})
 </p>
 @using (Html.BeginForm("index", "Productos", "index"))
 {
