--- a/SistemaFactura2/SistemaFactura2/Views/DetalleFacturas/Index.cshtml
+++ b/SistemaFactura2/SistemaFactura2/Views/DetalleFacturas/Index.cshtml
@@ -7,7 +7,9 @@
 <h2>Detalle d Facturas</h2>
 
 <p>
-    @Html.ActionLink("Nuevo", "Create")
+    @Html.ActionLink("Nuevo", "Create", null, new { @class = "btn btn-info" })
+    @Html.ActionLink("Print", "Imprimir", null, new { @class = "btn btn-info" })
+
 </p>
 <table class="table">
     <tr>
