--- a/SistemaFactura2/SistemaFactura2/Views/Productos/Index.cshtml
+++ b/SistemaFactura2/SistemaFactura2/Views/Productos/Index.cshtml
@@ -16,9 +16,10 @@
     </p>
 }
 
-<p>
-    @Html.ActionLink("Nuevo", "Create", null, new { @class = "btn btn-info" })
-</p>
+    <p>
+        @Html.ActionLink("Nuevo", "Create", null, new { @class = "btn btn-info" })
+        @Html.ActionLink("Print", "Imprimir", null, new { @class = "btn btn-info" })
+    </p>
 
 <table class="table">
     <tr>
