--- a/SistemaFactura2/SistemaFactura2/Views/Clientes/Index.cshtml
+++ b/SistemaFactura2/SistemaFactura2/Views/Clientes/Index.cshtml
@@ -9,7 +9,8 @@
 <h2>Clientes</h2>
 
 <p>
-    @Html.ActionLink("Nuevo", "Create")
+    @Html.ActionLink("Nuevo", "Create", null, new { @class = "btn btn-info" })
+    @Html.ActionLink("Print", "Imprimir", null, new { @class = "btn btn-info" })
 </p>
 
 @using (Html.BeginForm("index", "Clientes", "index"))
